Fixed work cards not displaying properly on safari

--- a/src/css/Work.css
+++ b/src/css/Work.css
@@ -33,7 +33,6 @@
     display: flex;
     flex-direction: row;
     gap: 5px;
-    height: 100%;
 }
 
 .uses img {
